--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -48,7 +48,7 @@
 
         <div class="col-md-3 item_icon">
           <div *ngIf="isOrg=='off'" style="display: flex; justify-content: center;">
-            <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08">
+            <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'overdue') && isQLHD_08 && !item.template_contract_id">
               <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" (click)="openCopy(item.id)" />
             </div>
             <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02">
