--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -1,189 +1,6 @@
 <!--begin template-->
 <div class="container-fluid">
-  <div class="contract-determine" *ngIf="data_organization">
-    <div class="col-md-1">
-      <input class="contract-total" style="width: 25px; height: 25px" type="number"
-             oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-             [(ngModel)]="data_organization.ordering" [disabled]="is_change_party">
-    </div>
-    <div class="col-md-11 contract--content">
-      <div class="contract__content--title">
-        <div>{{'organization.me' | translate | uppercase}} -</div>
-        <input type="text" [(ngModel)]="data_organization.name" disabled>
-      </div>
-      <div class="contract__content--participants">
-        <div class="participants-border">
-          <div class="label">{{'user.view' | translate}}</div>
-          <!--          <div class="participants&#45;&#45;content" *ngFor="let d of is_origanzation_reviewer; let index = index">-->
-          <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
-            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                   [(ngModel)]="d.ordering" [disabled]="getOriganzationReviewer().length == 1">
-            <div class="col-md-10 participants--input" style="display: flex">
-              <div class="participants__name">
-                <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
-                <div class="input-data">
-                  <img src="assets/img/icon_name.svg" class="input-img">
-                  <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name" autofocus>
-                </div>
-              </div>
-              <!--              <div class="participants-otp" style="z-index: -1">-->
-              <!--                <input type="checkbox">-->
-              <!--                <span class="label text-color">OTP</span>-->
-              <!--              </div>-->
-              <div class="participants__name">
-                <div class="label text-color">Email: <span class="required-title">*</span></div>
-                <div class="input-data">
-                  <img src="assets/img/login_email.svg" class="input-img">
-                  <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-1 delete-element" (click)="deleteOriganzationReviewer(index)">
-              <img src="assets/img/border_close.svg" alt="close.vn">
-              <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
-            </div>
-          </div>
-          <div class="participants--add">
-            <u class="label text-color" (click)="addOriganzationReviewer()">{{'btn.add.user.view' | translate}}</u>
-          </div>
-        </div>
-        <div class="participants-border">
-          <div class="label">{{'user.sign' | translate}}</div>
-          <!--          <div class="participants&#45;&#45;content" *ngFor="let d of this.is_origanzation_signature; let index = index">-->
-          <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
-            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                   [(ngModel)]="d.ordering">
-            <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
-              <div class="participants--input" style="display: flex">
-                <div class="participants__name">
-                  <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input #abcd [id]="'signature-origanzation-' + d.ordering" type="text"
-                           placeholder="{{'nhap_ho_va_ten' | translate}}"
-                           [(ngModel)]="d.name">
-                  </div>
-                </div>
-                <!--                <div class="participants-otp" style="z-index: -1">-->
-                <!--                  <input type="checkbox">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
-                <div class="participants__name">
-                  <div class="label text-color">Email: <span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                  </div>
-                </div>
-              </div>
-
-              <div class="participants--input select-text-input" style="display: flex">
-                <div class="participants__name" style="width: 90%">
-                  <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span>
-                  </div>
-                  <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                           [settings]="dropdownSignTypeSettings" [data]="signTypeList"
-                                           (change)="getDataSignature($event)">
-                    <ng-template #optionsTemplate let-item let-option="option"
-                                 let-id="id" let-isSelected="isSelected">
-                      <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                        <label style="color: #333; font-weight: normal;"
-                               [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                          {{getContractConnectItems[id].name}}
-                        </label>
-                      </div>
-                    </ng-template>
-                  </ng-multiselect-dropdown>
-                  <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
-                </div>
-                <!--                <div class="participants-otp">-->
-                <!--                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
-                <!--                <div class="participants__name">-->
-                <!--                  <div class="label text-color">{{'user.phone' | translate}}: <span *ngIf="d.is_otp" class="required-title">*</span></div>-->
-                <!--                  <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
-                <!--                </div>-->
-              </div>
-            </div>
-            <div *ngIf="getOriganzationSignature().length > 1" class="col-md-1 delete-element"
-                 (click)="deleteOriganzationSignature(index)">
-              <img src="assets/img/border_close.svg" alt="close.vn">
-              <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
-            </div>
-            <div *ngIf="getOriganzationSignature().length == 1" class="col-md-1 delete-element"></div>
-          </div>
-          <div class="participants--add">
-            <u class="label text-color" style="color: #106DB6"
-               (click)="addOriganzationSignature()">{{'btn.add.user.sign' | translate}}</u>
-          </div>
-        </div>
-        <div class="participants-border">
-          <div class="label">{{'user.doc' | translate}}</div>
-          <div class="participants--content" *ngFor="let d of getOriganzationDocument(); let index = index">
-            <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
-                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                   [(ngModel)]="d.ordering">
-            <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
-              <div class="participants--input" style="display: flex">
-                <div class="participants__name">
-                  <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/icon_name.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
-                  </div>
-                </div>
-                <!--                <div class="participants-otp" style="z-index: -1">-->
-                <!--                  <input type="checkbox">-->
-                <!--                  <span class="label text-color">OTP</span>-->
-                <!--                </div>-->
-                <div class="participants__name">
-                  <div class="label text-color">Email: <span class="required-title">*</span></div>
-                  <div class="input-data">
-                    <img src="assets/img/login_email.svg" class="input-img">
-                    <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
-                  </div>
-                </div>
-              </div>
-
-              <div class="participants-information">
-                <div class="participants-signature-type" style="width: 90%">
-                  <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span>
-                  </div>
-                  <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                           [settings]="dropdownSignTypeSettings" [data]="signType_doc">
-                    <ng-template #optionsTemplate let-item let-option="option"
-                                 let-id="id" let-isSelected="isSelected">
-                      <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                        <label style="color: #333; font-weight: normal;"
-                               [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                          {{getContractConnectItems[id].name}}
-                        </label>
-                      </div>
-                    </ng-template>
-                  </ng-multiselect-dropdown>
-                  <div class="required-title notify">{{'note_chon_loai_ki_so' | translate}}</div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-1 delete-element" (click)="deleteOriganzationDocument(index)">
-              <img src="assets/img/border_close.svg" alt="close.vn">
-              <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
-            </div>
-          </div>
-          <div class="participants--add">
-            <u class="label text-color" style="color: #106DB6"
-               (click)="addOriganzationDocument()">{{'btn.add.user.doc' | translate}}</u>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!--  Đối tác-->
-
   <div class="contract-determine" *ngFor="let item of dataParnterOrganization(); let id = index"
        style="display: flex">
     <div class="col-md-1">
@@ -216,7 +33,6 @@
         <!--          </div>-->
         <!--        </div>-->
         <div *ngIf="item.type == 2">
-
           <div class="participants-border">
             <div class="label">{{'user.view' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
@@ -450,7 +266,7 @@
     </button>
   </div>
   <div>
-    <button (click)="next()" type="button" name="next"
+    <button (click)="getApiDetermine()" type="button" name="next"
             class="next action-button pull-right">{{'btn.next' | translate }}</button>
   </div>
 </div>
