--- a/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract-template/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -161,3 +161,7 @@
         <button (click)="SaveContract('finish_contract')" type="button" name="next" class="next action-button pull-right">Hoàn thành</button>
     </div>
 </div>
+
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">Đang xử lý...</p>
+  </ngx-spinner>
