--- a/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
+++ b/src/app/main/contract/form-contract/confirm-contract-form/confirm-contract-form.component.html
@@ -6,9 +6,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <div class="label_item">Tên file hợp đồng</div>
+                        <div class="label_item">Tên hợp đồng</div>
                         <div>
-                            <div [innerHTML]="contractFileName" class="input_text"></div>
+                            <div [innerHTML]="this.datasForm.name" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <div class="label_item">Ngày hết hạn ký</div>
                         <div>
-                            <div [innerHTML]="dateDeadline" class="input_text"></div>
+                            <div [innerHTML]="this.datasForm.sign_time | date: 'dd/MM/yyyy'" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <div class="label_item">Lời nhắn</div>
                 <div>
-                    <div [innerHTML]="comment" class="input_text"></div>
+                    <div [innerHTML]="this.datasForm.notes" class="input_text"></div>
                 </div>
             </div>
         </div>
