add combobox the thuc tinh and loai goi dich vu

--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.scss
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.scss
@@ -29,6 +29,14 @@
         padding: 5px 15px;
     }
 }  
+
+.select-data {
+    border: 1px solid #106DB6;
+    border-radius: 5px;
+    min-height: 33px;
+    width: 100%;
+}  
+
 .cancel-button{
     border: 0px;
     border-radius: 5px;
