combobox thethuctinh va loaigoi

--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.html
@@ -70,7 +70,6 @@
         <p-dropdown
           panelStyleClass="font"
           [options]="theThucTinh"
-          formControlName="formComboBox"
           optionLabel="name"
           optionValue="id"
           placeholder="Chọn thể thức tính"
@@ -95,7 +94,7 @@
         <p-dropdown
           panelStyleClass="font"
           [options]="loaiGoi"
-          formControlName="formComboBox"
+          onchange="onChangeLoaiGoi()"
           optionLabel="name"
           optionValue="id"
           placeholder="Chọn loại gói"
