--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -401,6 +401,7 @@ input[type=number] {
   width: 100% !important;
   text-align: left;
   color: #ffc107;
+  font-size: 12px;
 }
 
 //::ng-deep .mat-form-field-flex {
