--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.scss
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.scss
@@ -431,6 +431,7 @@
     width: 100% !important;
     text-align: left;
     color: #ffc107;
+    font-size: 12px;
   }
   
   //::ng-deep .mat-form-field-flex {
