--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,4 +1,4 @@
-<div class="footer-contract">
+<div class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC'">
 <!--  <div class="content_footer">@Copyright 2021 - MobiFone</div>-->
   <div class="btn_footer">
     <div class="label">
