--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -61,16 +61,16 @@
 
         <div class="col-md-3 item_icon">
           <div style="display: flex; justify-content: center;">
-            <div class="div_icon" *ngIf="(item.status == 1 ) && item.role == 1">
+            <div class="div_icon" *ngIf="item.status == 1 && item.role == 1 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openCoordinatorContract(item)">{{'contract.lead' | translate}}</button>
             </div>
-            <div class="div_icon" *ngIf="(item.status == 1) && item.role == 2">
+            <div class="div_icon" *ngIf="item.status == 1 && item.role == 2 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openConsiderContract(item)">{{'contract.view' | translate}}</button>
             </div>
-            <div class="div_icon" *ngIf="getSignContract(item)">
+            <div class="div_icon" *ngIf="item.status == 1 && item.role == 3 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSignatureContract(item)">{{'contract.sign' | translate}}</button>
             </div>
-            <div class="div_icon" *ngIf="(item.status == 1) && item.role == 4">
+            <div class="div_icon" *ngIf="item.status == 1 && item.role == 4 && item.contractStatus == 20 && item.contractReleaseState == 'CON_HIEU_LUC'">
               <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
             </div>
             <div class="div_icon" *ngIf="item.contractStatus == '30'">
