--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -16,12 +16,11 @@
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">{{'unit.short-name' | translate }} <span class="required-title">*</span></div>
+                <div class="label text-color">{{'unit.short-name' | translate }}</div>
                 <div class="input-data">
                     <input type="text" formControlName="short_name">
                 </div>
                 <div *ngIf="submitted && f.short_name.errors" class="invalid">
-                    <div *ngIf="f.short_name.errors.required">{{'error.unit.short-code.required' | translate}}</div>
                     <div *ngIf="f.short_name.errors.pattern">{{'Tên viết tắt không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
             </div>
