--- a/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.scss
+++ b/src/app/admin/admin-main/admin-pack/admin-add-pack/admin-add-pack.component.scss
@@ -31,6 +31,14 @@
   }
 }
 
+
+input:read-only ,.fff {
+  background-color: #F2F2F2
+}
+.fff1{
+  background-color: white;
+}
+
 .select-data {
   border: 1px solid #106db6;
   border-radius: 5px;
