--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -176,7 +176,7 @@
     </div>
 
     <div class="row" style="justify-content: center; padding-top: 10px">
-      <button class="cancel-button" type="button" (click)="dialog.closeAll()">
+      <button class="cancel-button" type="button" (click)="cancel()">
         {{ "btn.cancel" | translate }}
       </button>
       <button class="save-button">
