form them goi dich vu cho to chuc

--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -9,9 +9,7 @@
           {{ "Mã gói dịch vụ" | translate }}
           <span class="required-title">*</span>
         </div>
-          <p-dropdown 
-          placeholder="Chọn gói dịch vụ"
-          > </p-dropdown>
+        <p-dropdown placeholder="Chọn gói dịch vụ"> </p-dropdown>
       </div>
 
       <div class="col-md-6">
@@ -97,14 +95,14 @@
           {{ "Ngày mua gói" | translate }}
           <span class="required-title">*</span>
         </div>
-          <p-calendar
-            appendTo="body"
-            id="created_at"
-            [showIcon]="true"
-            dateFormat="dd/mm/yy"
-            #created_at
-          >
-          </p-calendar>
+        <p-calendar
+          appendTo="body"
+          id="created_at"
+          [showIcon]="true"
+          dateFormat="dd/mm/yy"
+          #created_at
+        >
+        </p-calendar>
       </div>
 
       <div class="col-md-6">
@@ -112,11 +110,7 @@
           {{ "Kiểu thanh toán" | translate }}
           <span class="required-title">*</span>
         </div>
-        <div class="input-data">
-          <!-- dungpt -->
-          <!-- tao ngModel va  name cho input so luong hop dong -->
-          <input type="text" />
-        </div>
+        <p-dropdown placeholder="Chọn kiểu thanh toán"> </p-dropdown>
       </div>
     </div>
 
@@ -125,23 +119,21 @@
         <div class="label text-color">
           {{ "Trạng thái thanh toán *" | translate }}
         </div>
-        <div class="input-data">
-          <input type="text" />
-        </div>
+        <p-dropdown placeholder="Chọn trạng thái"> </p-dropdown>
       </div>
 
       <div class="col-md-6">
         <div class="label text-color">
           {{ "Ngày thanh toán *" | translate }}
         </div>
-          <p-calendar
-            appendTo="body"
-            id="created_at"
-            [showIcon]="true"
-            dateFormat="dd/mm/yy"
-            #created_at
-          >
-          </p-calendar>
+        <p-calendar
+          appendTo="body"
+          id="created_at"
+          [showIcon]="true"
+          dateFormat="dd/mm/yy"
+          #created_at
+        >
+        </p-calendar>
       </div>
     </div>
 
@@ -151,13 +143,13 @@
           {{ "Ngày bắt đầu" | translate }}
           <span class="required-title">*</span>
         </div>
-          <p-calendar
-            appendTo="body"
-            id="created_at"
-            [showIcon]="true"
-            dateFormat="dd/mm/yy"
-            #created_at
-          ></p-calendar>
+        <p-calendar
+          appendTo="body"
+          id="created_at"
+          [showIcon]="true"
+          dateFormat="dd/mm/yy"
+          #created_at
+        ></p-calendar>
       </div>
 
       <div class="col-md-6">
@@ -165,13 +157,13 @@
           {{ "Ngày kết thúc" | translate }}
           <span class="required-title">*</span>
         </div>
-          <p-calendar
-            appendTo="body"
-            id="created_at"
-            [showIcon]="true"
-            dateFormat="dd/mm/yy"
-            #created_at
-          ></p-calendar>
+        <p-calendar
+          appendTo="body"
+          id="created_at"
+          [showIcon]="true"
+          dateFormat="dd/mm/yy"
+          #created_at
+        ></p-calendar>
       </div>
     </div>
 
