--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -288,7 +288,7 @@
                 <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
               </div>
             </div>
-            <div *ngIf="getPartnerCoordination(item).length < 1" class="participants&#45;&#45;add">
+            <div *ngIf="getPartnerCoordination(item).length < 1" class="participants--add">
               <u class="label text-color" (click)="addPartnerCoordination(item, id)">{{'btn.add.user.lead' |
                 translate}}</u>
             </div>
