--- a/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.scss
+++ b/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.scss
@@ -28,7 +28,12 @@
     > div{
         padding: 5px 15px;
     }
-}  
+}
+
+input:read-only ,.fff {
+    background-color: #F2F2F2
+}
+
 .cancel-button{
     border: 0px;
     border-radius: 5px;
