integrate add/update user

--- a/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-add-user/admin-add-user.component.html
@@ -74,7 +74,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+            <button class="save-button" (click)="checkClick()">{{'btn.save' | translate}}</button>
         </div>
     </form>
   </div>
